feat: mailing with translation

--- a/services/src/main/resources/templates/proposal.html
+++ b/services/src/main/resources/templates/proposal.html
@@ -206,7 +206,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td style="overflow-wrap:break-word;word-break:break-word;padding:25px 10px 0px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;" th:text="#{PropDescription}">DESCRIPTION (written by user)</span></strong></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;" th:text="#{PropDescription}"></span></strong></span></p>
   </div>
 
       </td>
