feat:alert email

--- a/services/src/main/resources/templates/requestconfirmation.html
+++ b/services/src/main/resources/templates/requestconfirmation.html
@@ -329,7 +329,7 @@
                     <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 10px 25px 20px;font-family:'Open Sans',sans-serif;" align="left">
 
                       <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
-                        <p style="font-size: 14px; line-height: 140%;"><strong >Contact email:</strong><span th:text="${user2.email}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
+                        <p style="font-size: 14px; line-height: 140%;"><strong th:text="#{ContactEmail}"></strong><span th:text="${user2.email}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
                       </div>
 
                     </td>
