--- a/services/src/main/resources/templates/alertrecieved.html
+++ b/services/src/main/resources/templates/alertrecieved.html
@@ -371,13 +371,11 @@
                                         <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:'Open Sans',sans-serif;" align="left">
 
                                             <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
-                                            <th:block th:if="not ${user.getRole().equals('TRUCKER')}">
                                                 <div align="center">
-                                                    <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/trips/manageRequest(requestId=${request.tripId})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #142d4c; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
+                                                    <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/requests/details(id=${request.tripId})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #142d4c; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
                                                         <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;" th:text="#{AlertButton}"></span></strong></span></span>
                                                     </a>
                                                 </div>
-                                            </th:block>
                                         </td>
                                     </tr>
                                     </tbody>
