--- a/services/src/main/resources/templates/proposal.html
+++ b/services/src/main/resources/templates/proposal.html
@@ -171,7 +171,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <div style="color: #333333; line-height: 130%; text-align: left; word-wrap: break-word;">
     <p style="font-size: 14px; line-height: 130%;"><strong><span th:text="#{PropPhrase1} + ${user.name} + #{PropPhrase2}" style="font-size: 16px; line-height: 20.8px;"></span></strong></p>
 <p style="font-size: 14px; line-height: 130%;"> </p>
-<p style="font-size: 14px; line-height: 130%;"><span th:text="${proposal.userName}" style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;"></span></p>
+<p style="font-size: 14px; line-height: 130%;"><span th:text="${proposal.getUserName()}" style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;"></span></p>
   </div>
 
       </td>
@@ -277,14 +277,14 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
         <th:block th:if="${user.getRole().equals('TRUCKER')}">
               <div align="center">
-                    <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/trips/manageTrip(tripId=${proposal.tripId})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2dc26b; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
+                    <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/trips/manageTrip(tripId=${proposal.getTrip().tripId})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2dc26b; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
                       <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;" th:text="#{SeeProp}"></span></strong></span></span>
                     </a>
               </div>
           </th:block>
         <th:block th:if="not ${user.getRole().equals('TRUCKER')}">
           <div align="center">
-            <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/requests/manageRequest(requestId=${proposal.tripId})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2dc26b; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
+            <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/requests/manageRequest(requestId=${proposal.getTrip().tripId})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2dc26b; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
               <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;" th:text="#{SeeProp}"></span></strong></span></span>
             </a>
           </div>
