ft: manageTrip initiated (translations/offer management missing)

--- a/Front/src/styles/main.scss
+++ b/Front/src/styles/main.scss
@@ -109,6 +109,14 @@
     margin-top: 2vh;
 }
 
+.m-0{
+    margin: 0;
+}
+
+.m-1vh{
+    margin: 1vh;
+}
+
 .text-center {
     text-align: center;
 }
