--- a/services/src/main/resources/templates/tripconfirmation.html
+++ b/services/src/main/resources/templates/tripconfirmation.html
@@ -326,12 +326,14 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
     <table style="font-family:'Open Sans',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
       <tbody>
       <tr>
-        <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 10px 25px 20px;font-family:'Open Sans',sans-serif;" align="left">
-
+        <td class="v-container-padding-padding" style="overflow-wrap: break-word; word-break: break-word; padding: 5px 10px 25px 20px; font-family: 'Open Sans', sans-serif;" align="left">
           <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
-            <p style="font-size: 14px; line-height: 140%;"><strong th:text="#{ContactEmail}"></strong><span th:text="${user2.email}" style="color: #828080; font-size: 14px; line-height: 19.6px;"> </span></p>
+            <p style="font-size: 14px; line-height: 140%;">
+              <strong th:text="#{ContactEmail}"></strong>
+              <span th:if="${user.role == 'TRUCKER'}" th:text="${user.email}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span>
+              <span th:unless="${user.role == 'TRUCKER'}" th:text="${trip.getTrucker().getEmail()}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span>
+            </p>
           </div>
-
         </td>
       </tr>
       </tbody>
@@ -386,23 +388,23 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   </tbody>
 </table>
 
-<!--<table style="font-family:'Open Sans',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">-->
-<!--  <tbody>-->
-<!--    <tr>-->
-<!--      <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 30px;font-family:'Open Sans',sans-serif;" align="left">-->
-<!--        -->
-<!--  &lt;!&ndash;[if mso]><style>.v-button {background: transparent !important;}</style><![endif]&ndash;&gt;-->
-<!--&lt;!&ndash;        <th:block th:if="${user.role.equals('TRUCKER')}">&ndash;&gt;-->
-<!--&lt;!&ndash;          <div align="center">&ndash;&gt;-->
-<!--&lt;!&ndash;              <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/trips/manage/${trip.tripId}}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #142d4c; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">&ndash;&gt;-->
-<!--&lt;!&ndash;                <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;">View all details &gt;&gt;</span></strong></span></span>&ndash;&gt;-->
-<!--&lt;!&ndash;              </a>&ndash;&gt;-->
-<!--&lt;!&ndash;          </div>&ndash;&gt;-->
-<!--&lt;!&ndash;        </th:block>&ndash;&gt;-->
-<!--      </td>-->
-<!--    </tr>-->
-<!--  </tbody>-->
-<!--</table>-->
+    <table style="font-family: 'Open Sans', sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
+      <tbody>
+      <tr>
+        <td class="v-container-padding-padding" style="overflow-wrap: break-word; word-break: break-word; padding: 10px 10px 30px; font-family: 'Open Sans', sans-serif;" align="left">
+
+          <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
+          <th:block th:if="${user.role == 'TRUCKER'}">
+            <div align="center">
+              <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08/trips/manage/${trip.tripId}}" target="_blank" class="v-button" style="box-sizing: border-box; display: inline-block; font-family: 'Open Sans', sans-serif; text-decoration: none; -webkit-text-size-adjust: none; text-align: center; color: #FFFFFF; background-color: #142d4c; border-radius: 2px; -webkit-border-radius: 2px; -moz-border-radius: 2px; width: auto; max-width: 100%; overflow-wrap: break-word; line-height: 120%; font-size: 14px;">
+                <span style="display: block; padding: 12px 35px; line-height: 120%;"><strong><span style="line-height: 16.8px;">View all details &gt;&gt;</span></strong></span>
+              </a>
+            </div>
+          </th:block>
+        </td>
+      </tr>
+      </tbody>
+    </table>
 
 <table style="font-family:'Open Sans',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
   <tbody>
